--- a/dss/templates/decisiones/orientacion_placas.html
+++ b/dss/templates/decisiones/orientacion_placas.html
@@ -1,4 +1,3 @@
-{# prettier-ignore #}
 {% extends 'base.html' %}
 {% load static %}
 
@@ -37,7 +36,7 @@
                data-bs-parent="#accordionExample">
             <div class="accordion-body">
               <div class="row">
-                <div class="col-4 d-flex align-items-center">
+                <div class="col-5 d-flex align-items-center">
                   <div class="flex-column">
                     <h4>Análisis de cambio de orientación:</h4>
 
@@ -45,17 +44,23 @@
                       <table class="table">
                         <tr>
                           <td>Total consumido:</td>
-                          <td data-bs-toggle="tooltip" data-bs-title="Total de kWh consumidos">{{ item.totales.total|floatformat:'1' }} kWh</td>
+                          <td data-bs-toggle="tooltip"
+                              data-bs-title="Total de kWh consumidos">{{ item.totales.total|floatformat:'1' }} kWh
+                          </td>
                           <td></td>
-                          <td data-bs-toggle="tooltip" data-bs-title="Precio sin ahorro ni compensacion por excedente">{{ item.precios.0|floatformat:'1' }}€</td>
+                          <td data-bs-toggle="tooltip"
+                              data-bs-title="Precio sin ahorro ni compensacion por excedente">{{ item.precios.0|floatformat:'1' }}€
+                          </td>
                         </tr>
                         <tr>
                           <th data-bs-toggle="tooltip" data-bs-title="Orientación actual y modificada">Orientación</th>
                           <th data-bs-toggle="tooltip" data-bs-title="kWh autoconsumidos">kWh</th>
-                          <th data-bs-toggle="tooltip" data-bs-title="Porcentaje del autoconsumo respecto al consumo total">%</th>
+                          <th data-bs-toggle="tooltip"
+                              data-bs-title="Porcentaje del autoconsumo respecto al consumo total">%
+                          </th>
                           <th data-bs-toggle="tooltip" data-bs-title="Dinero ahorrado por autoconsumo">€</th>
                         </tr>
-                        {% if porcentajes.0 >= porcentajes.1 and porcentajes.0 >= porcentajes.2 %}
+                        {% if item.precios.1 >= item.precios.2 and item.precios.1 >= item.precios.3 %}
                           <tr class="table-text-success"> {% else %}
                           <tr>{% endif %}
                         <td>Actual:</td>
@@ -63,18 +68,18 @@
                         <td>{{ item.porcentajes.0|floatformat:'1' }}%</td>
                         <td>{{ item.precios.1|floatformat:'1' }}€</td>
                         </tr>
-                        {% if porcentajes.1 >= porcentajes.0 and porcentajes.1 >= porcentajes.2 %}
+                        {% if item.precios.2 >= item.precios.1 and item.precios.2 >= item.precios.3 %}
                           <tr class="table-text-success"> {% else %}
                           <tr>{% endif %}
-                        <td>Mañana:</td>
+                        <td>Mañana (-1h):</td>
                         <td>{{ item.totales.mañana|floatformat:'1' }} kWh</td>
                         <td>{{ item.porcentajes.1|floatformat:'1' }}%</td>
                         <td>{{ item.precios.2|floatformat:'1' }}€</td>
                         </tr>
-                        {% if porcentajes.2 >= porcentajes.0 and porcentajes.2 >= porcentajes.1 %}
+                        {% if item.precios.3 >= item.precios.1 and item.precios.3 >= item.precios.2 %}
                           <tr class="table-text-success"> {% else %}
                           <tr>{% endif %}
-                        <td>Tarde:</td>
+                        <td>Tarde (+1h):</td>
                         <td>{{ item.totales.tarde|floatformat:'1' }} kWh</td>
                         <td>{{ item.porcentajes.2|floatformat:'1' }}%</td>
                         <td>{{ item.precios.3|floatformat:'1' }}€</td>
@@ -83,7 +88,7 @@
                     {% endwith %}
                   </div>
                 </div>
-                <div class="col-8">
+                <div class="col-7">
                   {% include 'componentes/chart.html' with chart=item.chart %}
                 </div>
               </div>
