--- a/dss/templates/decisiones/aumento_participacion.html
+++ b/dss/templates/decisiones/aumento_participacion.html
@@ -37,8 +37,8 @@
                class="accordion-collapse collapse {% if forloop.first %} show {% endif %}"
                data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              <div class="row">
-                <div class="col-12 d-flex align-items-center">
+              <div class="row d-flex align-items-center">
+                <div class="col-6 offset-3">
                   <div class="flex-column">
                     <h4>Análisis del aumento de capacidad de producción:</h4>
 
